# flatbuffer_rpc_test

./: CMakeLists.txt  LICENSE  client.cpp  readme.md  rpc.fbs  server.cpp
